--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "file-saver": "^2.0.5",
     "jszip-utils": "^0.1.0",
     "pizzip": "^3.1.1",
+    "qrcodejs2": "0.0.2",
     "vue": "^2.6.11",
     "vue-router": "^3.5.4",
     "vuex": "^3.6.2"
