--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "docxtemplater": "^3.31.2",
     "element-ui": "^2.14.1",
     "file-saver": "^2.0.5",
+    "js-cookie": "^3.0.1",
     "jszip-utils": "^0.1.0",
+    "nprogress": "^0.2.0",
     "pizzip": "^3.1.1",
     "qrcodejs2": "0.0.2",
     "vue": "^2.6.11",
