--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "qrcodejs2": "0.0.2",
     "vue": "^2.6.11",
     "vue-router": "^3.5.4",
-    "vuex": "^3.6.2"
+    "vuex": "^3.6.2",
+    "xlsx": "^0.14.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.15",
