--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "chokidar": "^3.5.3",
     "core-js": "^3.6.5",
     "docxtemplater": "^3.31.2",
+    "echarts": "^5.3.3",
     "element-ui": "^2.14.1",
     "file-saver": "^2.0.5",
     "js-cookie": "^3.0.1",
@@ -25,6 +26,8 @@
     "vue": "^2.6.11",
     "vue-router": "^3.5.4",
     "vuex": "^3.6.2",
+    "vxe-table": "^3.6.6",
+    "xe-utils": "^3.5.6",
     "xlsx": "^0.14.1"
   },
   "devDependencies": {
